# pyflies

./: .gitattributes  .gitignore  .travis.yml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  compileui.sh  index.html  install-dev.sh  mkdocs.yml  setup.cfg  setup.py  sitemap.xml  versions.json
0.4/: 404.html
0.4/flow/: index.html
0.4/timing/: index.html
0.5/: search.html
0.5/flow/: index.html
0.5/images/: pyFlies-handdrawn-images.xopp~
0.5/screens/: index.html
0.5/timing/: index.html
about/contributing/: index.html
about/license/: index.html
about/release_notes/: index.html
docs/: Makefile  components.md  condition-tables.md  conditions.rst  conf.py  flow.md  generators.md  getting_started.rst  index.md  index.rst  make.bat  metrics.md  screens.md  stimuli.rst  target.md  test.md  timing.md  types-expressions.md
docs/about/: contributing.md  license.md  release_notes.md
docs/user_guide/: conditions.md  stimuli.md
examples/: gen_logs_dots.sh  gen_logs_psychopy.sh
examples/EriksenFlanker/: EriksenFlanker.pf  EriksenFlanker.pflog  EriksenFlanker.py  ef.py
examples/HelloWorld/: HelloWorld.pf  HelloWorld.pflog  HelloWorld.py
examples/MentalRotation/: mental_rotation.pf  mental_rotation.pflog  mental_rotation.py
examples/Parity/: Parity.pf  Parity.pflog  Parity.py
examples/PosnerCueing/: PosnerCueing.pf  PosnerCueing.pflog  PosnerCueing.py
examples/Simon/: Simon.pf  Simon.pflog  Simon.py
examples/VisualSearch/: visual_search.pf
examples/blocking/: blocking.pf  blocking.pflog  blocking.py
examples/counterbalancing/: compile.sh  counterbalancing.pf  counterbalancing.pflog  faces.pflog  faces.py  houses.pflog  houses.py
examples/reference/: ref_experiment.pf  ref_experiment.py
examples/reference-2/: ref_experiment.pf  ref_experiment.py
latest/: 404.html  index.html  search.html  sitemap.xml  style.css
latest/components/: index.html
latest/condition-tables/: index.html
latest/flow/: index.html
latest/generators/: index.html
latest/images/: pyFlies-handdrawn-images.xopp
latest/metamodel/: pyflies.pu
latest/metrics/: index.html
latest/screens/: index.html
latest/search/: search_index.json
latest/test/: index.html
latest/timing/: index.html
latest/types-expressions/: index.html
mkdocs/: search_index.json
pyflies/: components.py  descriptive.py  exceptions.py  export.py  gui.py  model_processor.py  outline.glade  pyflies.glade  scope.py  table.py  tools.py  viewer.py
pyflies/components/: audio.pfc  circle.pfc  keyboard.pfc  line.pfc  mouse.pfc  rectangle.pfc  sound.pfc
pyflies/generators/: .directory  __init__.py  util.py
pyflies/gui/: __init__.py  codeeditor.py  generate.glade  modelviewer.py  outline.py  pyflies.glade  sourceview.py  utils.py
pyflies/lang/: __init__.py  common.py  components.py  components.tx  model_processor.py  pflang.py  pyflies.lang  pyflies.py  pyflies.tx  pyflies_processor.py
pyflies/log/: __init__.py  debug.log.jinja
pyflies/scripts/: __init__.py  console.py  gui.py
scripts/: components.md.jinja  gen-comp-doc.py
src/generators/textx-gen-pyflies-psychopy/: CHANGELOG.md  LICENSE  README.md  runtests.sh  setup.cfg  setup.py
src/generators/textx-gen-pyflies-psychopy/pyfliespsychopy/: __init__.py
src/generators/textx-gen-pyflies-psychopy/pyfliespsychopy/templates/: main.py.jinja
src/textx-lang-pyflies/: CHANGELOG.md  LICENSE  README.md  runtests.sh  setup.cfg
src/textx-lang-pyflies/pyflies/: __init__.py  components.py  custom_classes.py  evaluated.py  expressions.py  model.py  model_processor.py  pyflies.tx  scope.py  stimuli.py  table.py  time.py  tools.py
src/textx-lang-pyflies/pyflies/components/: audio.pfc  base.pfc  circle.pfc  cross.pfc  image.pfc  rectangle.pfc  sound.pfc  text.pfc
src/textx-lang-pyflies/pyflies/grammar/: common.tx  pyflies.tx
src/textx-lang-pyflies/pyflies/lang/: __init__.py  common.py  common.tx  components.py  components.tx  pyflies.py  pyflies.tx  pyflies_processor.py
src/textx-lang-pyflies/pyflies/log/: __init__.py  debug.log.jinja
src/textx-lang-pyflies/tests/: EriksenFlanker.pf  TestModel.pf  common.py  common.tx  component_spec.tx  components.tx  cond_table.tx  expression.tx  language.py  pyflies.tx  scope.tx  stimuli.tx  test_component_parameters.pf  test_component_parameters_wrong.pf  test_component_timing_definition.pf  test_components.py  test_language.py  test_trial_component_parameters.pf  test_type.tx  timeref.tx  variables.tx
stable/: index.html  search.html
stable/components/: index.html
stable/condition-tables/: index.html
tests/: TestModel.pf  common.py  test_component_name_unique_1.pf  test_component_name_unique_2.pf  test_component_timing_definition.pf  test_components.py  test_language.py  test_load_generators.py  test_newlines_crlf.pf  test_repeat_with.pf  test_routine_parameters.pf  variables.tx
(+36 files in other folders)
