[metadata]
name = pyFlies
author = Igor R. Dejanovic
author_email = igor.dejanovic@gmail.com
license = GPLv3
description = A DSL for modeling cognitive psychology experiments
keywords = DSL, language, psychology, behaviour, experiments, generator
url = https://github.com/igordejanovic/pyFlies
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    textX >= 2.1.0, <3.0
    Jinja2 >=2.11.0, <2.12.0
setup_requires =
    wheel
    setuptools_scm

[options.extras_require]
dev =
    mkdocs
    mike
    twine
test =
     flake8
     coverage
     coveralls
     pytest

[options.entry_points]
console_scripts = 
    textx = textx.cli:textx

textx_generators =
    pyflies_psychopy = pyflies.generators:pyflies_psychopy

textx_languages =
    pyflies = pyflies.lang:pyflies

[bdist_wheel]
universal=1

[flake8]
ignore = E741,W503
max-line-length = 90
exclude = .git/*,.eggs/*,
          build/*,site/*,venv*,
          .ropeproject/*