[metadata]
name = textx-lang-pyflies
author = Igor Dejanovic
author_email = igor.dejanovic@gmail.com
license = MIT
description = A Domain-Specific Language for reaction time experiments specification
keywords = reaction time, psychology, textX, DSL
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta 
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    textX
include_package_data = True
package_dir =
    pyflies = pyflies

[options.package_data]
pyflies = *.tx, *.jinja

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    coverage
    coveralls
    pytest

[options.entry_points]
textx_languages =
    pyflies = pyflies:pyflies_language
textx_generators =
    log = pyflies.log:pyflies_log_generator

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90
