[metadata]
name = textx-gen-pyflies-psychopy
author = Igor Dejanovic
author_email = igor.dejanovic@gmail.com
license = MIT
description = PyFlies generator for PsychoPy target
keywords = textX
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = pyfliespsychopy
zip_safe = False
install_requires =
    textX
    textX-jinja
include_package_data = True
package_dir =
    pyfliespsychopy = pyfliespsychopy

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.entry_points]
textx_generators =
    pyfliespsychopy = pyfliespsychopy:pyflies_generate_psychopy

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90